# open-data-product-python-lib

./: .gitignore  README.md  pyproject.toml  setup.py
opendataproduct/config/: data_product_manifest_loader.py  data_transformation_gold_loader.py  data_transformation_silver_loader.py  dpds_loader.py  geodata_transformation_loader.py  odps_loader.py
opendataproduct/document/: data_product_canvas_generator.py  data_product_manifest_updater.py  dpds_canvas_generator.py  dpds_updater.py  jupyter_notebook_creator.py  odps_canvas_generator.py  odps_updater.py
opendataproduct/extract/: data_extractor.py  overpass_data_extractor.py
opendataproduct/load/: firebase_bucket_uploader.py
opendataproduct/transform/: data_aggregator.py  data_copier.py  data_csv_aggregator.py  data_csv_converter.py  geodata_bounding_box_converter.py  geodata_combiner.py  geodata_geojson_converter.py  geodata_geometry_converter.py  geodata_lor_area_matcher.py  geodata_projection_converter.py  geodata_property_converter.py  gtfs_geojson_converter.py  poi_csv_converter.py
opendataproduct/transformation/: data_aggregator.py  data_csv_converter.py
