[project]
name = "open-data-product-python-lib"
version = "0.1.0"
description = "Python library to build data products"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dacite>=1.9.2",
    "geopandas>=1.1.0",
    "jinja2>=3.1.6",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "notebook>=7.4.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pyarrow>=22.0.0",
    "pyproj>=3.7.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "setuptools>=80.9.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
